# hspec-experimental

./: .ghci  .travis.yml  hspec-experimental.cabal
example/: Spec.hs
src/Test/Hspec/: Experimental.hs
test/Test/Hspec/: ExperimentalSpec.hs
